# alert-simulation

./: .env  .gitignore  README.md  SETUP_BACKEND.md  SETUP_FRONTEND.md  docker-compose.yml  pyproject.toml
backend/: _celery.py  _process_pool.py  dispatch.py  main.py  messenger.py  redis_helpers.py  settings.py
backend/tests/: conftest.py  test_impl_celery.py  test_impl_process_pool.py  test_main.py  test_messenger.py  test_redis_helpers.py
frontend/: jest.config.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  JoinForm.tsx  PollForReady.tsx  PollForStatus.tsx  ResetButton.tsx  Settings.ts  SettingsCurrent.tsx  SettingsForm.tsx  StartButton.tsx  index.css  index.tsx  indexdisable.tsx  react-app-env.d.ts  setupProxy.js
