[tool.poetry]
name = "alert-simulation"
version = "0.1.0"
description = ""
authors = ["Ricardo Newbery <ric@digitalmarbles.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = {extras = ["all"], version = "^0.97.0"}
pyhumps = "^3.8.0"
celery = {extras = ["redis"], version = "^5.3.1"}
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
mypy = "^1.3.0"
black = "^23.3.0"
flower = "^1.2.0"
ruff = "^0.0.272"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
